--- a/app/src/main/res/xml/activity_main_scene.xml
+++ b/app/src/main/res/xml/activity_main_scene.xml
@@ -39,30 +39,33 @@
 <!--            app:layout_constraintTop_toTopOf="parent" />-->
 
 <!--        <Constraint-->
-<!--            android:id="@+id/label1"-->
-<!--            android:alpha="1.0"/>-->
+<!--            android:id="@id/label1"-->
+<!--            android:scaleX="1"-->
+<!--            android:scaleY="1"/>-->
 
 <!--        <Constraint-->
 <!--            android:id="@+id/label2"-->
-<!--            android:alpha="1"/>-->
+<!--            android:scaleX="1"-->
+<!--            android:scaleY="1"/>-->
 
 <!--        <Constraint-->
 <!--            android:id="@+id/label3"-->
-<!--            android:alpha="1"/>-->
+<!--            android:scaleX="1"-->
+<!--            android:scaleY="1"/>-->
 
-        <Constraint
-            android:id="@+id/label1">
-            <CustomAttribute
-                app:customFloatValue="1"
-                app:attributeName="alpha" />
-        </Constraint>
+<!--        <Constraint-->
+<!--            android:id="@+id/label1">-->
+<!--            <CustomAttribute-->
+<!--                app:customFloatValue="1"-->
+<!--                app:attributeName="alpha" />-->
+<!--        </Constraint>-->
 
     </ConstraintSet>
 
     <ConstraintSet android:id="@+id/end">
         <Constraint
             android:id="@id/hello_world"
-            android:layout_width="match_parent"
+            android:layout_width="100dp"
             android:layout_height="70dp"
             android:layout_marginTop="0dp"
             app:layout_constraintStart_toStartOf="parent"
@@ -73,40 +76,19 @@
         </Constraint>
 
 <!--        <Constraint-->
-<!--            android:id="@+id/btn1"-->
-<!--            app:layout_constraintBottom_toBottomOf="parent"-->
-<!--            app:layout_constraintEnd_toStartOf="@id/btn2"-->
-<!--            app:layout_constraintStart_toStartOf="parent"-->
-<!--            app:layout_constraintTop_toTopOf="parent" />-->
-
-<!--        <Constraint-->
-<!--            android:id="@+id/btn2"-->
-<!--            app:layout_constraintBottom_toBottomOf="parent"-->
-<!--            app:layout_constraintEnd_toStartOf="@id/btn3"-->
-<!--            app:layout_constraintStart_toEndOf="@id/btn1"-->
-<!--            app:layout_constraintTop_toTopOf="parent" />-->
-
-<!--        <Constraint-->
-<!--            android:id="@+id/btn3"-->
-<!--            app:layout_constraintBottom_toBottomOf="parent"-->
-<!--            app:layout_constraintEnd_toEndOf="parent"-->
-<!--            app:layout_constraintStart_toEndOf="@id/btn2"-->
-<!--            app:layout_constraintTop_toTopOf="parent" />-->
-
-        <Constraint
-            android:id="@+id/label1">
-            <CustomAttribute
-                app:customFloatValue="0"
-                app:attributeName="alpha" />
-        </Constraint>
+<!--            android:id="@id/label1"-->
+<!--            android:scaleX="0"-->
+<!--            android:scaleY="0"/>-->
 
 <!--        <Constraint-->
 <!--            android:id="@+id/label2"-->
-<!--            android:alpha="0"/>-->
+<!--            android:scaleX="0"-->
+<!--            android:scaleY="0"/>-->
 
 <!--        <Constraint-->
 <!--            android:id="@+id/label3"-->
-<!--            android:alpha="0"/>-->
+<!--            android:scaleX="0"-->
+<!--            android:scaleY="0"/>-->
 
     </ConstraintSet>
 
@@ -114,28 +96,13 @@
         app:constraintSetStart="@+id/start"
         app:constraintSetEnd="@id/end"
         motion:motionInterpolator="easeInOut">
-<!--        <KeyFrameSet>-->
-<!--            <KeyAttribute-->
-<!--                app:framePosition="0"-->
-<!--                app:motionTarget="@id/label1"-->
-<!--                android:alpha="1.0"/>-->
-<!--            <KeyAttribute-->
-<!--                app:framePosition="100"-->
-<!--                app:motionTarget="@id/label1"-->
-<!--                android:alpha="0.0"/>-->
-<!--        </KeyFrameSet>-->
-<!--        <OnSwipe-->
-<!--            motion:dragDirection="dragUp"-->
-<!--            motion:autoComplete="false"-->
-<!--            motion:moveWhenScrollAtTop="true"-->
-<!--            />-->
-
         <OnSwipe
-            app:moveWhenScrollAtTop="@id/scrollable_content"
             app:dragDirection="dragUp"
             app:touchAnchorId="@id/scrollable_content"
             app:touchAnchorSide="top"
-            />
+            app:dragScale="1"
+            app:moveWhenScrollAtTop="true"
+            app:onTouchUp="stop" />
 
     </Transition>
 </MotionScene>
