--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,40 +2,51 @@
 <androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/motion_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background"
+    android:paddingHorizontal="15dp"
+    android:paddingTop="15dp"
     app:layoutDescription="@xml/activity_main_scene"
-    android:id="@+id/motion_layout"
     tools:context=".MainActivity">
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/hello_world"
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:padding="10dp"
-        android:text="Hello World!"
-        android:gravity="center"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/total_balance_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Total Balance:"
+            android:textSize="15sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/btn_container"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/hello_world">
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/total_balance_value"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:elevation="10dp"
+            android:text="123.45$"
+            android:textSize="40sp"
+            android:shadowColor="@color/colorPrimaryDark"
+            android:shadowRadius="1.5"
+            android:shadowDx="1"
+            android:shadowDy="1"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/btn2"
+            app:layout_constraintTop_toBottomOf="@id/total_balance_title" />
 
         <ImageButton
             android:id="@+id/btn1"
             style="@style/btn_style"
             android:contentDescription="@string/send_desc"
             android:src="@drawable/ic_send"
-            app:layout_constraintBottom_toTopOf="@id/label1"
+            app:layout_constraintBottom_toTopOf="@id/card_list"
             app:layout_constraintEnd_toStartOf="@id/btn2"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@id/total_balance_value" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/label1"
@@ -43,7 +54,6 @@
             android:layout_height="wrap_content"
             android:alpha="1.0"
             android:text="@string/send_desc"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@id/btn1"
             app:layout_constraintStart_toStartOf="@id/btn1"
             app:layout_constraintTop_toBottomOf="@id/btn1" />
@@ -53,17 +63,17 @@
             style="@style/btn_style"
             android:contentDescription="@string/convert_desc"
             android:src="@drawable/ic_convert"
-            app:layout_constraintBottom_toTopOf="@id/label2"
+            app:layout_constraintBottom_toTopOf="@id/card_list"
             app:layout_constraintEnd_toStartOf="@id/btn3"
             app:layout_constraintStart_toEndOf="@id/btn1"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@id/total_balance_value" />
 
         <TextView
             android:id="@+id/label2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/convert_desc"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/card_list"
             app:layout_constraintEnd_toEndOf="@id/btn2"
             app:layout_constraintStart_toStartOf="@id/btn2"
             app:layout_constraintTop_toBottomOf="@id/btn2" />
@@ -73,32 +83,41 @@
             style="@style/btn_style"
             android:contentDescription="@string/receive_desc"
             android:src="@drawable/ic_receive"
-            app:layout_constraintBottom_toTopOf="@id/label3"
+            app:layout_constraintBottom_toTopOf="@id/card_list"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/btn2"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@id/total_balance_value"/>
 
         <TextView
             android:id="@+id/label3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/receive_desc"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/card_list"
             app:layout_constraintEnd_toEndOf="@id/btn3"
             app:layout_constraintStart_toStartOf="@id/btn3"
             app:layout_constraintTop_toBottomOf="@id/btn3" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/scrollable_content"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/card_list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        android:layout_height="match_parent"
+        android:layout_marginTop="250dp"
+        app:cardUseCompatPadding="true"
+        android:elevation="15dp"
+        app:cardCornerRadius="4dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/btn_container"
-        tools:listitem="@layout/list_single_item"/>
+        app:layout_constraintStart_toStartOf="parent">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/scrollable_content"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:listitem="@layout/list_single_item" />
+    </androidx.cardview.widget.CardView>
 
 </androidx.constraintlayout.motion.widget.MotionLayout>
