--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,5 +11,7 @@
         <item name="android:layout_height">@dimen/btn_size</item>
         <item name="android:layout_width">@dimen/btn_size</item>
         <item name="android:background">@drawable/btn_bg</item>
+        <item name="android:elevation">14dp</item>
+        <item name="android:layout_margin">15dp</item>
     </style>
 </resources>
