--- a/app/src/main/res/xml/activity_main_scene.xml
+++ b/app/src/main/res/xml/activity_main_scene.xml
@@ -5,104 +5,161 @@
 
     <ConstraintSet android:id="@+id/start">
         <Constraint
-            android:id="@id/hello_world"
-            android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:layout_marginTop="70dp"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            android:id="@id/total_balance_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"/>
+
+        <Constraint
+            android:id="@id/total_balance_value"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:scaleX="1"
+            android:scaleY="1"
+            app:layout_constraintBottom_toTopOf="@id/btn2"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/total_balance_title">
             <CustomAttribute
-                app:customDimension="10sp"
-                app:attributeName="textSize" />
-
+                app:attributeName="textColor"
+                app:customColorValue="@color/light_purple" />
         </Constraint>
-<!--        <Constraint-->
-<!--            android:id="@+id/btn1"-->
-<!--            app:layout_constraintBottom_toBottomOf="parent"-->
-<!--            app:layout_constraintEnd_toStartOf="@id/btn2"-->
-<!--            app:layout_constraintStart_toStartOf="parent"-->
-<!--            app:layout_constraintTop_toTopOf="parent" />-->
 
-<!--        <Constraint-->
-<!--            android:id="@+id/btn2"-->
-<!--            app:layout_constraintBottom_toBottomOf="parent"-->
-<!--            app:layout_constraintEnd_toStartOf="@id/btn3"-->
-<!--            app:layout_constraintStart_toEndOf="@id/btn1"-->
-<!--            app:layout_constraintTop_toTopOf="parent" />-->
+        <Constraint
+            android:id="@id/label1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toTopOf="@id/card_list"
+            app:layout_constraintEnd_toEndOf="@id/btn1"
+            app:layout_constraintStart_toStartOf="@id/btn1"
+            app:layout_constraintTop_toBottomOf="@id/btn1">
+            <CustomAttribute
+                app:attributeName="alpha"
+                app:customFloatValue="1.0" />
+        </Constraint>
 
-<!--        <Constraint-->
-<!--            android:id="@+id/btn3"-->
-<!--            app:layout_constraintBottom_toBottomOf="parent"-->
-<!--            app:layout_constraintEnd_toEndOf="parent"-->
-<!--            app:layout_constraintStart_toEndOf="@id/btn2"-->
-<!--            app:layout_constraintTop_toTopOf="parent" />-->
+        <Constraint
+            android:id="@id/label2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toTopOf="@id/card_list"
+            app:layout_constraintEnd_toEndOf="@id/btn2"
+            app:layout_constraintStart_toStartOf="@id/btn2"
+            app:layout_constraintTop_toBottomOf="@id/btn2">
+            <CustomAttribute
+                app:attributeName="alpha"
+                app:customFloatValue="1.0" />
+        </Constraint>
 
-<!--        <Constraint-->
-<!--            android:id="@id/label1"-->
-<!--            android:scaleX="1"-->
-<!--            android:scaleY="1"/>-->
+        <Constraint
+            android:id="@id/label3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toTopOf="@id/card_list"
+            app:layout_constraintEnd_toEndOf="@id/btn3"
+            app:layout_constraintStart_toStartOf="@id/btn3"
+            app:layout_constraintTop_toBottomOf="@id/btn3">
+            <CustomAttribute
+                app:attributeName="alpha"
+                app:customFloatValue="1.0" />
+        </Constraint>
 
-<!--        <Constraint-->
-<!--            android:id="@+id/label2"-->
-<!--            android:scaleX="1"-->
-<!--            android:scaleY="1"/>-->
-
-<!--        <Constraint-->
-<!--            android:id="@+id/label3"-->
-<!--            android:scaleX="1"-->
-<!--            android:scaleY="1"/>-->
-
-<!--        <Constraint-->
-<!--            android:id="@+id/label1">-->
-<!--            <CustomAttribute-->
-<!--                app:customFloatValue="1"-->
-<!--                app:attributeName="alpha" />-->
-<!--        </Constraint>-->
-
+        <Constraint
+            android:id="@id/card_list"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="300dp"
+            android:layout_marginBottom="-50dp"
+            app:layout_constraintBottom_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
     </ConstraintSet>
 
     <ConstraintSet android:id="@+id/end">
         <Constraint
-            android:id="@id/hello_world"
-            android:layout_width="100dp"
-            android:layout_height="70dp"
-            android:layout_marginTop="0dp"
+            android:id="@id/total_balance_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"/>
+
+        <Constraint
+            android:id="@id/total_balance_value"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:scaleX="0.5"
+            android:scaleY="0.5"
+            app:layout_constraintBottom_toBottomOf="@id/total_balance_title"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
             <CustomAttribute
-                app:customDimension="5sp"
-                app:attributeName="textSize" />
+                app:attributeName="textColor"
+                app:customColorValue="@color/colorPrimaryDark" />
         </Constraint>
 
-<!--        <Constraint-->
-<!--            android:id="@id/label1"-->
-<!--            android:scaleX="0"-->
-<!--            android:scaleY="0"/>-->
+        <Constraint
+            android:id="@id/label1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toTopOf="@id/card_list"
+            app:layout_constraintEnd_toEndOf="@id/btn1"
+            app:layout_constraintStart_toStartOf="@id/btn1"
+            app:layout_constraintTop_toBottomOf="@id/btn1">
+            <CustomAttribute
+                app:attributeName="alpha"
+                app:customFloatValue="0.0" />
+        </Constraint>
 
-<!--        <Constraint-->
-<!--            android:id="@+id/label2"-->
-<!--            android:scaleX="0"-->
-<!--            android:scaleY="0"/>-->
+        <Constraint
+            android:id="@id/label2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toTopOf="@id/card_list"
+            app:layout_constraintEnd_toEndOf="@id/btn2"
+            app:layout_constraintStart_toStartOf="@id/btn2"
+            app:layout_constraintTop_toBottomOf="@id/btn2">
+            <CustomAttribute
+                app:attributeName="alpha"
+                app:customFloatValue="0.0" />
+        </Constraint>
 
-<!--        <Constraint-->
-<!--            android:id="@+id/label3"-->
-<!--            android:scaleX="0"-->
-<!--            android:scaleY="0"/>-->
+        <Constraint
+            android:id="@id/label3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toTopOf="@id/card_list"
+            app:layout_constraintEnd_toEndOf="@id/btn3"
+            app:layout_constraintStart_toStartOf="@id/btn3"
+            app:layout_constraintTop_toBottomOf="@id/btn3">
+            <CustomAttribute
+                app:attributeName="alpha"
+                app:customFloatValue="0.0" />
+        </Constraint>
 
+        <Constraint
+            android:id="@id/card_list"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="150dp"
+            android:layout_marginBottom="15dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
     </ConstraintSet>
 
     <Transition
-        app:constraintSetStart="@+id/start"
         app:constraintSetEnd="@id/end"
+        app:constraintSetStart="@+id/start"
         motion:motionInterpolator="easeInOut">
         <OnSwipe
             app:dragDirection="dragUp"
-            app:touchAnchorId="@id/scrollable_content"
-            app:touchAnchorSide="top"
             app:dragScale="1"
             app:moveWhenScrollAtTop="true"
-            app:onTouchUp="stop" />
-
+            app:onTouchUp="stop"
+            app:touchAnchorId="@id/card_list"
+            app:touchAnchorSide="top" />
     </Transition>
 </MotionScene>
