--- a/app/src/main/res/xml/activity_main_scene.xml
+++ b/app/src/main/res/xml/activity_main_scene.xml
@@ -10,7 +10,7 @@
             android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
         <Constraint
             android:id="@id/total_balance_value"
@@ -31,40 +31,31 @@
             android:id="@id/label1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintBottom_toTopOf="@id/card_list"
+            android:layout_marginTop="10dp"
+            android:alpha="1.0"
             app:layout_constraintEnd_toEndOf="@id/btn1"
             app:layout_constraintStart_toStartOf="@id/btn1"
-            app:layout_constraintTop_toBottomOf="@id/btn1">
-            <CustomAttribute
-                app:attributeName="alpha"
-                app:customFloatValue="1.0" />
-        </Constraint>
+            app:layout_constraintTop_toBottomOf="@id/btn1"/>
 
         <Constraint
             android:id="@id/label2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintBottom_toTopOf="@id/card_list"
+            android:layout_marginTop="10dp"
+            android:alpha="1.0"
             app:layout_constraintEnd_toEndOf="@id/btn2"
             app:layout_constraintStart_toStartOf="@id/btn2"
-            app:layout_constraintTop_toBottomOf="@id/btn2">
-            <CustomAttribute
-                app:attributeName="alpha"
-                app:customFloatValue="1.0" />
-        </Constraint>
+            app:layout_constraintTop_toBottomOf="@id/btn2"/>
 
         <Constraint
             android:id="@id/label3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintBottom_toTopOf="@id/card_list"
+            android:layout_marginTop="10dp"
+            android:alpha="1.0"
             app:layout_constraintEnd_toEndOf="@id/btn3"
             app:layout_constraintStart_toStartOf="@id/btn3"
-            app:layout_constraintTop_toBottomOf="@id/btn3">
-            <CustomAttribute
-                app:attributeName="alpha"
-                app:customFloatValue="1.0" />
-        </Constraint>
+            app:layout_constraintTop_toBottomOf="@id/btn3"/>
 
         <Constraint
             android:id="@id/card_list"
@@ -83,7 +74,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
         <Constraint
             android:id="@id/total_balance_value"
@@ -104,40 +95,31 @@
             android:id="@id/label1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:alpha="0.0"
             app:layout_constraintBottom_toTopOf="@id/card_list"
             app:layout_constraintEnd_toEndOf="@id/btn1"
             app:layout_constraintStart_toStartOf="@id/btn1"
-            app:layout_constraintTop_toBottomOf="@id/btn1">
-            <CustomAttribute
-                app:attributeName="alpha"
-                app:customFloatValue="0.0" />
-        </Constraint>
+            app:layout_constraintTop_toBottomOf="@id/btn1"/>
 
         <Constraint
             android:id="@id/label2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:alpha="0.0"
             app:layout_constraintBottom_toTopOf="@id/card_list"
             app:layout_constraintEnd_toEndOf="@id/btn2"
             app:layout_constraintStart_toStartOf="@id/btn2"
-            app:layout_constraintTop_toBottomOf="@id/btn2">
-            <CustomAttribute
-                app:attributeName="alpha"
-                app:customFloatValue="0.0" />
-        </Constraint>
+            app:layout_constraintTop_toBottomOf="@id/btn2"/>
 
         <Constraint
             android:id="@id/label3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:alpha="0.0"
             app:layout_constraintBottom_toTopOf="@id/card_list"
             app:layout_constraintEnd_toEndOf="@id/btn3"
             app:layout_constraintStart_toStartOf="@id/btn3"
-            app:layout_constraintTop_toBottomOf="@id/btn3">
-            <CustomAttribute
-                app:attributeName="alpha"
-                app:customFloatValue="0.0" />
-        </Constraint>
+            app:layout_constraintTop_toBottomOf="@id/btn3"/>
 
         <Constraint
             android:id="@id/card_list"
